--- a/index.html
+++ b/index.html
@@ -13,16 +13,53 @@
       <button id="myButton" class="bigButton btn btn-primary">Mélanger</button>
       <p id="reckt"></p>
     </div>
-    <script type="text/javascript" src="js/random.js"></script>
+
+    <div class="row">
+      <div id="p1" class="col chair">
+
+      </div>
+      <div id="p2" class="col chair">
+
+      </div>
+      <div id="p3" class="col chair">
+
+      </div>
+      <div id="p4" class="col chair">
+
+      </div>
+      <div id="p5" class="col chair">
+
+      </div>
+      <div id="p6" class="col chair">
+
+      </div>
+    </div>
+
+    <div class="row">
+      <div id="p7" class="col chair">
+
+      </div>
+      <div id="p8" class="col chair">
+
+      </div>
+      <div id="p9" class="col chair">
+
+      </div>
+      <div id="p10" class="col chair">
+
+      </div>
+      <div id="p11" class="col chair">
+
+      </div>
+      <div id="p12" class="col chair">
+
+      </div>
+    </div>
+
+
+
   </body>
 
-  <script type="text/javascript">
+  <script type="text/javascript" src="js/random.js"></script>
 
-    randomized = document.getElementById("myButton");
-    d = document.getElementById("top");
-
-    randomized.onclick = function() {
-      throwawayNode = d.removeChild(randomized);
-    }
-  </script>
 </html>
