--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title></title>
-    <link rel="stylesheet" href="css/style.css">
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
 
@@ -14,47 +14,52 @@
       <p id="reckt"></p>
     </div>
 
-    <div class="row">
-      <div id="p1" class="col chair">
+    <div class="container">
+      <div class="row">
+        <div class="col chair">
+          <p id="p1"></p>
+        </div>
+        <div class="col chair">
+          <p id="p2"></p>
+        </div>
+        <div class="col chair">
+          <p id="p3"></p>
+        </div>
+        <div class="col chair">
+          <p id="p4"></p>
+        </div>
+        <div class="col chair">
+          <p id="p5"></p>
+        </div>
+        <div class="col chair">
+          <p id="p6"></p>
+        </div>
+      </div>
+      <div class="myTable">
 
       </div>
-      <div id="p2" class="col chair">
-
-      </div>
-      <div id="p3" class="col chair">
-
-      </div>
-      <div id="p4" class="col chair">
-
-      </div>
-      <div id="p5" class="col chair">
-
-      </div>
-      <div id="p6" class="col chair">
-
+      <div class="row">
+        <div class="col chair">
+          <p id="p7"></p>
+        </div>
+        <div class="col chair">
+          <p id="p8"></p>
+        </div>
+        <div class="col chair">
+          <p id="p9"></p>
+        </div>
+        <div class="col chair">
+          <p id="p10"></p>
+        </div>
+        <div class="col chair">
+          <p  id="p11"></p>
+        </div>
+        <div class="col chair">
+          <p  id="p12"></p>
+        </div>
       </div>
     </div>
 
-    <div class="row">
-      <div id="p7" class="col chair">
-
-      </div>
-      <div id="p8" class="col chair">
-
-      </div>
-      <div id="p9" class="col chair">
-
-      </div>
-      <div id="p10" class="col chair">
-
-      </div>
-      <div id="p11" class="col chair">
-
-      </div>
-      <div id="p12" class="col chair">
-
-      </div>
-    </div>
 
 
 
