--- a/index.html
+++ b/index.html
@@ -39,22 +39,22 @@
 
       </div>
       <div class="row">
-        <div class="col chair">
+        <div class="col chair2">
           <p id="p7"></p>
         </div>
-        <div class="col chair">
+        <div class="col chair2">
           <p id="p8"></p>
         </div>
-        <div class="col chair">
+        <div class="col chair2">
           <p id="p9"></p>
         </div>
-        <div class="col chair">
+        <div class="col chair2">
           <p id="p10"></p>
         </div>
-        <div class="col chair">
+        <div class="col chair2">
           <p  id="p11"></p>
         </div>
-        <div class="col chair">
+        <div class="col chair2">
           <p  id="p12"></p>
         </div>
       </div>
