--- a/index.html
+++ b/index.html
@@ -35,8 +35,13 @@
           <p id="p6"></p>
         </div>
       </div>
-      <div class="myTable">
-
+      <div class="myTable row">
+        <div>
+          <img class="arrow" src="arrow.png" alt="arrow">
+        </div>
+        <div class="text">
+          <p>tableau</p>
+        </div>
       </div>
       <div class="row">
         <div class="col chair2">
